About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181122a:
    + Added a main menu
        > Currently only has a "New Basin" button and some silly text
    * Some minor improvements to UI
v20181118a:
    + Added some now-commented-out bust attempt at improving the storm algorithm
    * Tweaks to storm 'type' determination
    * Normalized ranges for moisture field and storm organization to 0-1 rather than 0-100
v20181117a:
    + Added "depth" to storm algorithm to help with steering and recurve
    * Fixed forecast track (the yellow dots) to follow upper-level steering
    * Tweaks to storm algorithm
    * Fixed jetstream misbehavior in SHem
v20181112a:
    + Added moisture/dry air environmental field
    + Added wind shear environmental field
    + Added new "coast outline" rendering for land for moisture field
    * Large change to storm algorithm to make seasons less hyperactive and somewhat more realistic
        > Looks to need to be ironed out quite a bit over the next few verisons
v20181111a:
    * Big improvement to upper-level steering to make it less drunk and more realistic
v20181110a:
    + Added a currently-very-drunken upper-level steering field
    * Storm steering algorithm changed to follow both upper and lower-level steering based on strength and if extratropical
        > True "wind shear" not quite added yet as storms don't yet weaken
v20181109b:
    + Readded environmental wobble
    * Optimized environmental fields for future saving & loading of basins
v20181109a:
    * Changed snow-rendering algorithm for faster and more efficient rendering
v20181105a:
    + Added code for a graphical shader that gives land some shadows and visible depth
        > Disabled until user settings are added since it increases render times
    * Adjustments to SST anomalies to use a more logarithmic system, and have greater anomalies closer to the poles